--- a/job-tracker-ui/.env
+++ b/job-tracker-ui/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=https://job-tracker-fullstack-3m2s.onrender.com
+REACT_APP_API_BASE_URL=https://job-tracker-fullstack-3m2s.onrender.com/api/applications
